# c-arel

./: CMakeLists.txt  MIT-LICENSE  README.md  c-arel.pc.in
include/: c-arel.h
include/c-arel/: alias_predication.h  attribute.h  base.h  connection.h  derived.h  engine.h  expessions.h  math.h  order_predications.h  predications.h  table.h  util.h  version.h
include/c-arel/managers/: delete_manager.h  insert_manager.h  select_manager.h  tree_manager.h  update_manager.h
include/c-arel/nodes/: and.h  ascending.h  binary.h  count.h  delete_statement.h  descending.h  distinct.h  equality.h  function.h  in.h  infix_operation.h  inner_join.h  insert_statement.h  join_source.h  named_function.h  node.h  outer_join.h  select_core.h  select_statement.h  sql_literal.h  string_join.h  table_alias.h  unary.h  unqualified_column.h  update_statement.h  values.h  with.h
include/c-arel/visitors/: to_sql.h  visitor.h
projects/x-code/c-arel.xcodeproj/: project.pbxproj
projects/x-code/c-arel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: alias_predication.cpp  attribute.cpp  base.cpp  connection.cpp  expressions.cpp  math.cpp  order_predications.cpp  predications.cpp  table.cpp  util.cpp
src/managers/: delete_manager.cpp  insert_manager.cpp  select_manager.cpp  tree_manager.cpp  update_manager.cpp
src/nodes/: and.cpp  ascending.cpp  binary.cpp  count.cpp  delete_statement.cpp  descending.cpp  distinct.cpp  equality.cpp  function.cpp  in.cpp  infix_operation.cpp  inner_join.cpp  insert_statement.cpp  join_source.cpp  named_function.cpp  node.cpp  outer_join.cpp  select_core.cpp  select_statement.cpp  sql_literal.cpp  string_join.cpp  table_alias.cpp  unary.cpp  unqualified_column.cpp  update_statement.cpp  values.cpp  with.cpp
src/visitors/: to_sql.cpp  visitor.cpp
tests/: test_helpers.cpp  test_helpers.h  test_lib.cpp  test_lib.h  test_main.cpp
tests/suite/: test_select_manager.cpp  test_table.cpp  test_variant.cpp
